--- a/style.css
+++ b/style.css
@@ -42,8 +42,8 @@ a:visited {
 
 .navigation-container {
     padding: 30px;
-    min-width: 150px;
-    max-width: 150px;
+    width: 100px;
+    min-width: 100px;
     background-color: red;
     color:white;
     text-decoration: underline;
@@ -54,8 +54,7 @@ a:visited {
 
 .info-container {
     padding: 30px;
-    min-width: 500px;
-    max-width: 500px;
+    width: 500px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 15px;
 }
